--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/font.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/plugins.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -103,15 +102,21 @@
                     </button>
                 </div>
             </div>
-            <div class="luxurycar ">
-                <h1 class="heading text-light fw-bold fs-1 ">Looking for Luxury rental
+            <div class="luxurycar text-light">
+                <h1 class=" fs-1 ">Looking for Luxury rental
                      car in&nbspDubai?</h1>
-                <p></p>
+                <p class="">Find the best offer on the car rental market in Dubai</p>
             </div>
         </div>
     </section>
-    <section class="sec">
-        
+    <section class="Business cars">
+        <h2 class="title"></h2>
+        <div class="text_link_car">
+            <p></p>
+            <a href="">
+                <img src="" alt="">
+            </a>
+        </div>
      
     </section>
     <script src="js/plugins.js"></script>
